# plotting

./: pyproject.toml
common/fonts/: __init__.py
plots/: __init__.py  base_plot.py
plots/bar_plot/: bar_plot_settings.py  bar_plotv2.py
plots/line_plot/: line_plot.py  line_plot_settings.py
plots/line_plot/line_types/: moving_average_line.py  percent_change_line.py
plots/line_plot/line_types/utils/: line_factory.py
plots/matrix_plot/: matrix_plot.py  matrix_plot_settings.py
plots/utils/data_loaders/: adam_data_loader.py  base_data_loader.py
plots/waterfall_plot/: waterfall_plot_settings.py
plotting/common/functions/: load_yaml.py
plotting/plots/: base_plot.py
plotting/plots/bar_plot/: bar_plot.py  bar_plotv2.py
plotting/plots/line_plot/: line_plot.py
plotting/plots/line_plot/line_types/: __init__.py  base_line.py  investment_growth_line.py  moving_average_line.py  percent_change_line.py  volatility_line.py
plotting/plots/utils/: plot_factory.py
plotting/plots/utils/data_loaders/: adam_data_loader.py  base_data_loader.py
plotting/plots/waterfall_plot/: waterfall_plot.py
plotting/settings/utils/fields/: __init__.py  justifiable_label.py  label.py
plotting/settings/utils/groups/: axis_settings.py  (+4 more)
plotting/themes/: __init__.py  base_theme.py  color_themes.yaml  resolve.yaml  resolve_theme.py  return_stacked_theme.py  theme.py  themev2.py
settings/: base_plot_settings.py
settings/utils/groups/: __init__.py  base_settings_group.py  date_settings.py  legend_settings.py  theme_settings.py  title_settings.py
themes/: return-stacked.yaml
