[tool.poetry]
name = "plotting"
version = "0.1.0"
description = ""
authors = ["kiegsgroot <kiegan@the-groots.ca>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.109.2"
uvicorn = "^0.27.1"
lets-plot = "^4.2.0"
matplotlib = "^3.8.3"
seaborn = "^0.13.2"
pandas = "^2.2.0"
geopandas = "^0.14.3"
cairosvg = "^2.7.1"
pyyaml = "^6.0.1"
colorspacious = "^1.1.2"
data_handling = { git = "https://github.com/ReSolveAssetManagement/data_handling.git", branch = "main" }


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"